--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Шапка сайту-->
     <header>
         <nav>
-            <a lang="en" href="idex.html"><span>Web</span>Studio </a>
+            <a lang="en" href="index.html"><span>Web</span>Studio </a>
             <ul>
                 <li><a href="#">Студия</a></li>
                 <li><a href="#">Портфолио</a></li>
