--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div>
                 <h2>Чем мы занимаемся</h2>
                 <ul>
-                    <li><img src="./images/1.jpg" alt="Розробляемо" width="370"></li>
-                    <li><img src="./images/2.jpg" alt="Оптимізуемо" width="370"></li>
-                    <li><img src="./images/3.jpg" alt="Розробляемо дизайн" width="370"></li>
+                    <li><img src="./images/primo.jpg" alt="Розробляемо" width="370"></li>
+                    <li><img src="./images/seco.jpg" alt="Оптимізуемо" width="370"></li>
+                    <li><img src="./images/ter.jpg" alt="Розробляемо дизайн" width="370"></li>
                 </ul>
             </div>
         </section>
