--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
         <!-- переваги -->
         <section>
+            <h2>Наши особенности</h2>
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -52,19 +53,19 @@
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
-            <!-- послуги  -->
-            <div>
-                <h2>Чем мы занимаемся</h2>
-                <ul>
-                    <li><img src="./images/primo.jpg" alt="Розробляемо" width="370"></li>
-                    <li><img src="./images/seco.jpg" alt="Оптимізуемо" width="370"></li>
-                    <li><img src="./images/ter.jpg" alt="Розробляемо дизайн" width="370"></li>
-                </ul>
-            </div>
+        </section>
+        <!--послуги -->
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="./images/primo.jpg" alt="Розробляемо" width="370"></li>
+                <li><img src="./images/seco.jpg" alt="Оптимізуемо" width="370"></li>
+                <li><img src="./images/ter.jpg" alt="Розробляемо дизайн" width="370"></li>
+            </ul>
         </section>
         <!-- командa  -->
         <section>
-            <h4>Наша команда</h4>
+            <h2>Наша команда</h2>
             <ul>
                 <li><img src="./images/igor.jpg" alt="Игорь Демьяненко" width="270">
                     <h3>Игорь Демьяненко</h3>
