--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
     </main>
     <!--  Підвал  -->
     <footer>
-        <a href="index.html"><span>Web</span>
-            Studio
-        </a>
+        <a href="index.html"><span>Web</span>Studio</a>
         <address>
             <ul>
                 <li><a href="https://goo.gl/maps/FCM4GeWNBaiLMRfr8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
